--- a/src/components/client/App.scss
+++ b/src/components/client/App.scss
@@ -74,12 +74,34 @@ h4 {
   margin-bottom: 5px;
 }
 
-.player-names--grouped {
+.game-form__player-names {
   :nth-child(1) {
-    background-color: #F3F3F3;
+    background-color: #fff9c4;
   }
 
   :nth-child(2) {
-    background-color: #F3F3F3;
+    background-color: #c8e6c9;
+  }
+
+  :nth-child(3) {
+    background-color: #b3e5fc;
+  }
+}
+
+.player-names--grouped {
+  :nth-child(1) {
+    background-color: #fff9c4;
+  }
+
+  :nth-child(2) {
+    background-color: #fff9c4;
+  }
+
+  :nth-child(3) {
+    background-color: #c8e6c9;
+  }
+
+  :nth-child(4) {
+    background-color: #c8e6c9;
   }
 }
