--- a/src/components/client/Game/EditRoundForm/EditRoundForm.scss
+++ b/src/components/client/Game/EditRoundForm/EditRoundForm.scss
@@ -12,13 +12,16 @@
   }
 
   .scores__item {
+    position: relative;
     display: flex;
     align-items: center;
     flex-direction: column;
-    margin: 0 15px;
+    margin: 0 10px;
 
     input {
-      width: 100px;
+      width: 86px;
+      padding: 0.4em 1em;
+      text-align: center;
     }
   }
 }
