--- a/src/components/client/Game/GameTable/GameTable.scss
+++ b/src/components/client/Game/GameTable/GameTable.scss
@@ -67,10 +67,12 @@
 .round-score {
   position: absolute;
   top: 21px;
-  left: -67px;
+  left: -69px;
   font-size: 0.4em;
   color: #b1601b;
   background: #FFF;
+  padding: 2px;
+  border-radius: 3px;
 }
 
 .game-player {
