--- a/src/components/client/Game/EditRoundForm/EditRoundForm.scss
+++ b/src/components/client/Game/EditRoundForm/EditRoundForm.scss
@@ -1,7 +1,7 @@
 .edit-round-form {
   &__game-score {
-    margin: 10px 0;
-    font-size: 2em;
+    margin-bottom: 10px;
+    font-size: 2.2em;
   }
 
   &__scores {
@@ -20,8 +20,16 @@
 
     input {
       width: 86px;
+      height: 35px;
       padding: 0.4em 1em;
       text-align: center;
+    }
+  }
+
+  &__buttons {
+    button {
+      width: 86px;
+      margin: 0 10px;
     }
   }
 }
