--- a/src/components/client/Game/EditRoundForm/GroupForm/GroupForm.scss
+++ b/src/components/client/Game/EditRoundForm/GroupForm/GroupForm.scss
@@ -1,7 +1,13 @@
 .byte-left, .byte-right {
   position: absolute;
   top: 18px;
-  height: 33px;
+  height: 35px;
+}
+
+.game-score__label {
+  font-size: 0.4em;
+  color: #7d7d7d;
+  font-weight: 600;
 }
 
 .byte-right {
@@ -18,7 +24,7 @@
   align-items: center;
   justify-content: center;
   top: 18px;
-  height: 33px;
+  height: 35px;
   width: 86px;
   border-radius: 2px;
   background-color: #d32f2f;
