--- a/src/components/client/Game/EditRoundForm/EditRoundForm.scss
+++ b/src/components/client/Game/EditRoundForm/EditRoundForm.scss
@@ -19,7 +19,8 @@
     margin: 0 10px;
 
     input {
-      width: 86px;
+      width: 90px;
+      // width: 86px;
       height: 35px;
       padding: 0.4em 1em;
       text-align: center;
@@ -28,7 +29,8 @@
 
   &__buttons {
     button {
-      width: 86px;
+      width: 90px;
+      // width: 86px;
       margin: 0 10px;
     }
   }
