--- a/src/components/lib/Switch/Switch.scss
+++ b/src/components/lib/Switch/Switch.scss
@@ -1,6 +1,6 @@
-$width: 50px;
+$width: 46px;
 $padding: 0;
-$height: $width / 2 + $padding;
+$height: 25px;
 
 *, *::before, *::after { box-sizing: inherit; }
 
