--- a/src/components/client/Game/EditRoundForm/GroupForm/GroupForm.scss
+++ b/src/components/client/Game/EditRoundForm/GroupForm/GroupForm.scss
@@ -25,7 +25,7 @@
   justify-content: center;
   top: 18px;
   height: 35px;
-  width: 86px;
+  width: 90px;
   border-radius: 2px;
   background-color: #d32f2f;
   color: #FFF;
@@ -39,12 +39,10 @@
   left: 0;
 }
 
-.bella {
+.options__item {
+  margin: 5px 0;
+  min-height: 32px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-}
-
-.options__item {
-  margin: 5px 0;
 }
