--- a/src/components/lib/Button/Button.scss
+++ b/src/components/lib/Button/Button.scss
@@ -1,6 +1,8 @@
 .button {
   padding: 5px 15px;
   margin: 0;
+  // background: #FFF;
+  // border: 2px solid #dedede;
 
   &:disabled {
     opacity: 0.3;
