--- a/src/components/client/Game/EditRoundForm/GroupForm/GroupForm.scss
+++ b/src/components/client/Game/EditRoundForm/GroupForm/GroupForm.scss
@@ -45,4 +45,15 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+
+  b {
+    padding: 0 8px;
+  }
+
+  select {
+    background: #FFF;
+    height: 30px;
+    width: 100px;
+    padding: 0 5px;
+  }
 }
