--- a/src/components/client/App.scss
+++ b/src/components/client/App.scss
@@ -8,7 +8,7 @@ html, body {
 body {
   color: #333;
   margin: 0;
-  padding: 15px;
+  padding: 15px 25px;
   box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   overflow: auto;
