--- a/src/components/client/CreateGameForm/CreateGameForm.scss
+++ b/src/components/client/CreateGameForm/CreateGameForm.scss
@@ -9,7 +9,7 @@
     padding: 0 11px;
   }
 
-  :nth-child(1) {
+  /* :nth-child(1) {
     background-color: #fff9c4;
   }
 
@@ -19,11 +19,10 @@
 
   :nth-child(3) {
     background-color: #b3e5fc;
-  }
+  } */
 }
 
 .player-names--grouped {
-
   :nth-child(1) {
     background-color: #fff9c4;
   }
@@ -39,4 +38,9 @@
   :nth-child(4) {
     background-color: #c8e6c9;
   }
+}
+
+
+.player-name-input {
+  margin: 5px 0;
 }
