--- a/src/components/client/Game/GameTable/GameTable.scss
+++ b/src/components/client/Game/GameTable/GameTable.scss
@@ -1,3 +1,5 @@
+$eggsColor: #ff6f00;
+
 .game-table {
   margin: 0 auto;
   border-collapse: collapse;
@@ -29,7 +31,11 @@
 
   &__cell {
     height: 42px;
-    min-width: 61px;
+    min-width: 70px;
+
+    &--with-eggs {
+      color: $eggsColor;
+    }
   }
 
   &__row {
@@ -73,15 +79,25 @@
   }
 }
 
+.round-eggs {
+  font-size: 0.4em;
+  vertical-align: middle;
+  margin-left: 2px;
+}
+
 .round-score-value {
   font-size: 0.4em;
   color: #2E7D32;
 }
 
+.round-score-eggs {
+  color: $eggsColor;
+}
+
 .round-score {
   position: absolute;
   top: 15%;
-  left: -71px;
+  left: -80px;
   font-size: 0.4em;
   color: #b1601b;
   background: #FFF;
