--- a/src/components/client/App.scss
+++ b/src/components/client/App.scss
@@ -3,6 +3,7 @@ html, body {
   width: 100%;
   height: 100%;
   box-sizing: border-box;
+  user-select: none;
 }
 
 body {
@@ -38,6 +39,7 @@ input, button, select, textarea {
   box-sizing: border-box;
   border: 1px solid #ccc;
   border-radius: 2px;
+  -webkit-appearance: none;
 }
 
 input:disabled {
