--- a/src/components/client/Game/EditRoundForm/GroupForm/GroupForm.scss
+++ b/src/components/client/Game/EditRoundForm/GroupForm/GroupForm.scss
@@ -1,6 +1,6 @@
 .byte-left, .byte-right {
   position: absolute;
-  top: 18px;
+  bottom: 0;
   height: 35px;
 }
 
@@ -23,7 +23,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  top: 18px;
+  bottom: 0;
   height: 35px;
   width: 90px;
   border-radius: 2px;
