--- a/src/components/client/App.scss
+++ b/src/components/client/App.scss
@@ -11,7 +11,7 @@ body {
   margin: 0;
   box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-  overflow: auto;
+  // overflow: auto;
 }
 
 a {
